# XLArig

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  RBIGLOBAL BTC MINER  README.md  build_notes.txt  rubiglobal btc mimer 2020
android/: README.md
android/jni/: Android.mk  Application.mk
cmake/: FindRandomX.cmake  asm.cmake  cpu.cmake  flags.cmake  randomx.cmake
defyx/: CMakeLists.txt  LICENSE  Makefile  README.md  defyx.sln
defyx/doc/: configuration.md  design.md  program.asm  specs.md
defyx/src/: allocator.cpp  allocator.hpp  assembly_generator_x86.cpp  assembly_generator_x86.hpp  blake2_generator.cpp  blake2_generator.hpp  bytecode_machine.cpp  bytecode_machine.hpp  common.hpp  configuration.h  dataset.cpp  dataset.hpp  defyx.cpp  defyx.h  instruction.cpp  instruction.hpp  jit_compiler_a64.hpp  jit_compiler_fallback.hpp  jit_compiler_x86.cpp  jit_compiler_x86.hpp  jit_compiler_x86_static.S  jit_compiler_x86_static.asm  jit_compiler_x86_static.hpp  program.hpp  reciprocal.c  reciprocal.h  superscalar.cpp  superscalar.hpp  superscalar_program.hpp  virtual_machine.cpp  virtual_machine.hpp  vm_compiled.cpp  vm_compiled.hpp  vm_compiled_light.cpp  vm_compiled_light.hpp  vm_interpreted.cpp  vm_interpreted.hpp  vm_interpreted_light.cpp  vm_interpreted_light.hpp
defyx/src/asm/: configuration.asm
defyx/src/blake2/: blake2.h  blake2b.c  initrom.c  phc.c  tests.c  userom.c  yescrypt-common.c
defyx/src/tests/: api-example1.c  api-example2.cpp  benchmark.cpp  code-generator.cpp  jit-performance.cpp  perf-simulation.cpp  rng-tests.cpp  runtime-distr.cpp  scratchpad-entropy.cpp  superscalar-avalanche.cpp  superscalar-init.cpp  superscalar-stats.cpp  tests.cpp
defyx/vcxproj/: api-example1.vcxproj  api-example1.vcxproj.filters  api-example2.vcxproj  benchmark.vcxproj  code-generator.vcxproj  jit-performance.vcxproj  perf-simulation.vcxproj  randomx-dll.vcxproj  randomx-dll.vcxproj.filters  randomx.vcxproj  randomx.vcxproj.filters  runtime-distr.vcxproj  scratchpad-entropy.vcxproj  superscalar-avalanche.vcxproj  superscalar-init.vcxproj  superscalar-stats.vcxproj  tests.vcxproj
doc/: ALGORITHMS.md  API.md  Android.md  CHANGELOG_OLD.md  building.md
doc/api/1/: config.json  summary.json
doc/topology/: AMD_Opteron_6272_x4_N8_linux_2_0_4_LXC.xml  AMD_Opteron_6348_x4_N8_linux_1_11_2.xml  AMD_Ryzen_7_2700X_windows_2_0_4.xml  AMD_Ryzen_Threadripper_2950X_N2_linux_2_0_4.xml  Intel_Core_i7-3770_linux_2_0_4.xml  Intel_Core_i7-6700_linux_2_0_4.xml  Intel_Xeon_Silver_4114_x2_N2_linux_2_0_4.xml
misc/: build.bat  build_rh6.sh  switch_test.js
res/: app.rc
scripts/: benchmark_10M.cmd  benchmark_1M.cmd  build.hwloc.sh  build.hwloc1.sh  build.libressl.sh  build.libressl_win.sh  build.openssl.sh  build.openssl3.sh  build.uv.sh  build_deps.sh  pool_mine_example.cmd  solo_mine_example.cmd
scripts/build_static/: build_static_linux_aarch64.sh  build_static_linux_armeabi-v7a.sh  build_static_linux_x86-64.sh
src/: App.cpp  App.h  App_unix.cpp  App_win.cpp  Cpu.cpp  Cpu.h  Cpu_arm.cpp  Cpu_mac.cpp  Cpu_stub.cpp  Cpu_unix.cpp  Cpu_win.cpp  Mem.cpp  Mem.h  Mem_unix.cpp  Mem_win.cpp  Summary.cpp  Summary.h  config.json  donate.h  version.h  xlarig.cpp  xtlrig.cpp
src/android/: App.cpp
src/android/workers/: MultiWorker.cpp  Worker.cpp  Workers.cpp
src/api/: Api.cpp  Api.h  ApiRouter.cpp  ApiRouter.h  Httpd.cpp  Httpd.h  NetworkState.cpp  NetworkState.h
src/api/interfaces/: IApiListener.h  IApiRequest.h
src/api/requests/: ApiRequest.cpp  ApiRequest.h  HttpApiRequest.cpp  HttpApiRequest.h
src/api/v1/: ApiRouter.cpp  ApiRouter.h
src/backend/: backend.cmake
src/backend/common/: Hashrate.cpp  Hashrate.h  HashrateInterpolator.h  Thread.h  Threads.cpp  Threads.h  Worker.cpp  Worker.h  WorkerJob.h  Workers.cpp  Workers.h
src/backend/cpu/: Cpu.cpp  Cpu.h  CpuBackend.cpp  CpuBackend.h  CpuConfig.cpp  CpuConfig.h  CpuConfig_gen.h  CpuLaunchData.cpp  CpuLaunchData.h  CpuThread.cpp  CpuThread.h  CpuThreads.cpp  CpuThreads.h  CpuWorker.cpp  CpuWorker.h
src/base/: base.cmake
src/base/api/: Api.cpp  Api.h  Httpd.cpp  Httpd.h
src/base/crypto/: Algorithm.cpp  Algorithm.h
src/base/io/: Console.cpp  Console.h  Watcher.cpp  Watcher.h
src/base/kernel/: Base.cpp  Base.h  Entry.cpp  Entry.h  Platform.cpp  Platform.h  Platform_mac.cpp  Platform_unix.cpp  Platform_win.cpp  Process.cpp  Process.h  Signals.cpp  Signals.h
src/base/tools/: Arguments.cpp  Arguments.h  Baton.h  Buffer.cpp  Buffer.h  Chrono.h  Handle.h  String.cpp  String.h  Timer.cpp  Timer.h
src/common/: Console.cpp  Console.h  Platform.cpp  Platform.h  Platform_mac.cpp  Platform_unix.cpp  Platform_win.cpp  xlarig.h  xtlrig.h
src/common/api/: HttpBody.h  HttpReply.h  HttpRequest.cpp  HttpRequest.h  Httpd.cpp  Httpd.h
src/common/config/: CommonConfig.cpp  CommonConfig.h  ConfigLoader.cpp  ConfigLoader.h  ConfigWatcher.cpp  ConfigWatcher.h
src/common/cpu/: BasicCpuInfo.cpp  BasicCpuInfo.h  BasicCpuInfo_arm.cpp  Cpu.cpp  Cpu.h
src/common/crypto/: Algorithm.cpp  Algorithm.h  keccak.cpp  keccak.h
src/common/interfaces/: IClientListener.h  IConfig.h  IConfigCreator.h  IConsoleListener.h  IControllerListener.h  ICpuInfo.h  ILogBackend.h  IStrategy.h  IStrategyListener.h  (+1 more)
src/core/: Benchmark.cpp  Benchmark.h  Config.cpp  Config.h  ConfigCreator.h  ConfigLoader_platform.h  Controller.cpp  Controller.h  Miner.cpp  Miner.h
src/crypto/: CryptoNight.h  CryptoNight_arm.h  CryptoNight_constants.h  CryptoNight_monero.h  CryptoNight_test.h  CryptoNight_x86.h
src/interfaces/: IClientListener.h  IConfig.h  IConfigCreator.h  IConsoleListener.h  IControllerListener.h  IJobResultListener.h  ILogBackend.h  IStrategy.h  IStrategyListener.h  IThread.h  IWatcherListener.h  IWorker.h
src/net/: JobResult.h  JobResults.cpp  JobResults.h  Network.cpp  Network.h  NetworkState.cpp  NetworkState.h
src/workers/: CpuThread.cpp  CpuThread.h  Handle.cpp  Handle.h  Hashrate.cpp  Hashrate.h  MultiWorker.cpp  MultiWorker.h  ThreadHandle.cpp  ThreadHandle.h  Worker.cpp  Worker.h  Workers.cpp  Workers.h
(+203 files in other folders)
